# dynsys

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/travis/: install-linux.sh
include/: AttractorsParams.h  Camera.h  Camera.hpp  DynamicSystemWrapper.hpp  DynamicSystemsDefault.hpp  Lexer.h  Lexer.hpp  Locus.h  Locus.hpp  Model.h  Model.hpp  ModelImpl.hpp  Parser.h  Parser.hpp  ParserException.h  ParserImpl.h  ParserImpl.hpp  ParserNodes.hpp  PointsViewQGLWidget.h  PointsViewQGLWidget.hpp  Preferences.h  Preferences.hpp  ShaderController.h  StoppableTask.hpp  VideoEncoder.h  VideoEncoder.hpp  Window.h  Window.hpp  WindowPreferences.h  WindowPreferences.hpp  WindowUtils.hpp  mainwindow.h  visual_opengl_widget.h  window.h
include/DynamicSystemParser/: DynamicSystemParser.hpp
include/DynamicSystemParser/Impl/: DynamicSystemParserImpl.hpp
include/DynamicSystems/: DynamicSystem.hpp  DynamicSystemImpl.hpp  DynamicSystemInternal.hpp  SystemsBase.hpp  SystemsBaseGetImpl.hpp
include/DynamicSystems/Impl/: DynamicSystemImpl.hpp  DynamicSystemInternal.hpp  SystemsBaseGetImpl.hpp
include/DynamicSystems/SystemsBase/: SystemsBase.hpp  SystemsBaseGetImpl.hpp
include/Model/: Model.hpp  ModelImpl.hpp
include/Model/Impl/: ModelImpl.hpp
include/Parser/: Lexer.hpp  Parser.hpp  ParserImpl.hpp
materials/: FragmentShader.fsh  GeometryShader.gsh  GeometryShaderLines.gsh  GeometryShaderPoints.gsh  Resources.qrc  VertexShader.vsh
src/: Camera.cpp  Lexer.cpp  Locus.cpp  Model.cpp  Parser.cpp  PointsViewQGLWidget.cpp  Preferences.cpp  ShaderController.cpp  VideoEncoder.cpp  Window.cpp  WindowPreferences.cpp  form.ui  formPreferences.ui  main.cpp  mainwindow.cpp  visual_opengl_widget.cpp  window.cpp
src/DynamicSystemParser/: DynamicSystemParser.cpp
src/Parser/: Lexer.cpp  Parser.cpp
test/: CMakeLists.txt  testParser.cpp  testSystems.cpp  test_all.cpp
